# CNL-for-Autonomous-Vehicle

./: .#Drive.gf  .#Drive.hs  .#Prototype.hs  .#Prototype.lagda  .#lexicon.txt  .README.md.swp  .successCases.txt.swp  Drive.agdai  Drive.gf  Drive.gfo  Drive.hi  Drive.hs  DriveEng.gf  DriveEng.gfo  Prototype.agda  Prototype.agdai  Prototype.hs  Prototype.lagda  README.md  Synonymize.hs  cnlpaper.txt  interestingExs.txt  lexicon.txt  successCases.txt  twin-primes.lagda
code/: Data.hs  Drive.pgf  Makefile  Prototype.hs  justSentences.txt
data-processing-hs/: .#data-processing-hs.cabal  .data-processing-hs.cabal.swp  CHANGELOG.md  data-processing-hs.cabal
data-processing-hs/app/: Data.hs  Main.hs
data-processing-hs/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
data-processing-hs/text/: .caseless2.txt.swp  .interestingExs.txt.swp  .justNavigation.txt.swp  .justSentences.txt.swp  POS.txt  POStagset.txt  interestingExs.txt  justNavShort.txt  justNavigation.txt
data-processing-hs/text/stanford-postagger-full-2020-11-17/: justSentences2.txt  sample-input.txt
finalReport/: .#roadmap.lagda  .roadmap.lagda.swp  TODO-list.txt  references.bib  roadmap.agdai  roadmap.aux  roadmap.bbl  roadmap.bcf  roadmap.blg  roadmap.fdb_latexmk  roadmap.fls  roadmap.lagda  roadmap.out  roadmap.ptb  roadmap.run.xml  roadmap.tex  roadmap.toc  roadmap.xdv
gf-command-lang/: .#Drive.gf  CHANGELOG.md  Drive.gf  DriveEng.gf  LTL.hs  PyDrive.py  Synonymize.hs  gf-command-lang.cabal  ideas.txt
gf-command-lang/app/: .#Synonymize.hs  Drive.hs  LTL.hs  Synonymize.hs  ]
gf-command-lang/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  up-to-date
gf-command-lang/pgf/: Drive.pgf
gf-command-lang/prototype/: Prototype.lagda
pgfTest/: .#GenerateAgda.hs  GenerateAgda.hs  Test.hi  Test.hs  TestEng.gf
presentation/: Example1.agdai  Example1.lagda  F.agdai  F.lagda  G.agdai  G.lagda  LTL-seq.agdai  LTL-seq.lagda  LTL-seqq.agdai  LTL-seqq.lagda  LTL-seqqq.agdai  LTL-seqqq.lagda  LTL-seqqqq.agdai  LTL-seqqqq.lagda  Makefile  Model.agdai  Model.lagda  Support.agdai  Support.lagda  Syntax.agdai  Syntax.lagda  Syntaxx.agdai  (+17 more)
(+76 files in other folders)
