cabal-version:      2.4
name:               data-processing-hs
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         gusmacwa@student.gu.se

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable data-processing-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Data

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      attoparsec >= 0.14.4,
                      aeson >= 2.0.3.0,
                      bytestring >= 0.10.12.0,
                      text >= 1.2.4.1,
                      lens >= 5.0,
                      lens-aeson >= 1.1.3
                      -- basement >= 0.0.12
    hs-source-dirs:   app
    default-language: Haskell2010
